# qtpybind11adapter

./: .gitmodules  CMakeLists.txt  README.md
src/qtpybind11adapter/: embeddedpython.h  embeddedpythonstderroutstreamredirect.cpp  embeddedpythonstderroutstreamredirect.h  pythonsubprocess.cpp  pythonsubprocess.h
